--- a/feeds.toml
+++ b/feeds.toml
@@ -1,3 +1,6 @@
+[default]
+timeout = 180
+
 [ticket]
 title = "인터파크 티켓"
 url = "http://ticket.interpark.com/Webzine/Paper/TPNoticeList_iFrame.asp?bbsno=34&pageno=0&stext=&KindOfGoods=&Genre=&sort="
@@ -5,7 +8,8 @@ entrySelector = "tbody > tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td[class='date']"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_m]
 title = "인터파크 티켓 모바일"
@@ -15,7 +19,8 @@ titleSelector = "p[class='label']"
 linkSelector = "a"
 contentSelector = "dl[class='ticketOpen'] > dd"
 imageSelector = "span img"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_online]
 title = "인터파크 티켓 ─ 온라인"
@@ -24,7 +29,8 @@ entrySelector = "tbody tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td.date"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_musical]
 title = "인터파크 티켓 ─ 뮤지컬"
@@ -33,7 +39,8 @@ entrySelector = "tbody tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td.date"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_fanclub]
 title = "인터파크 티켓 ─ 팬클럽"
@@ -42,7 +49,8 @@ entrySelector = "tbody tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td.date"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_fanmeeting]
 title = "인터파크 티켓 ─ 팬미팅"
@@ -51,7 +59,8 @@ entrySelector = "tbody tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td.date"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
 
 [ticket_festival]
 title = "인터파크 티켓 ─ 페스티벌"
@@ -60,4 +69,5 @@ entrySelector = "tbody tr"
 titleSelector = "td.subject a"
 linkSelector = "td.subject a"
 contentSelector = "td.date"
-waitUntil = "networkidle"
+waitForSelector = "td[class='subject']"
+onFail = "stale"
